--- a/recipes/style.css
+++ b/recipes/style.css
@@ -5,10 +5,8 @@ img {
     border-radius: 1em;
 }
 
-.block {
-    background-color: rgba(129, 104, 173, 0.259);
+.recipe {
+    display: flex;
+    flex-direction: column;
     width: 100%;
-    border-radius: 1em;
-    margin: 10px 0;
-    /* padding: 10px; */
 }
